--- a/css/editable-span.css
+++ b/css/editable-span.css
@@ -1,1 +1,6 @@
-.editableSpan{}
+.editableSpan{position: relative}
+
+
+
+/* .editableSpan>button{display: none}
+.editableSpan:hover>button{display: inline;position: absolute;top: 0;left: 100%;} */
