--- a/css/index.css
+++ b/css/index.css
@@ -11,16 +11,16 @@ body{width: 100%;height: 100vh;overflow: hidden;}
 
 .page{width: 100%;height: 100vh;overflow: auto;margin:0 auto;margin-top: 40px;}
 
-.resume{width: 70%;margin: 0 auto;text-align: center;overflow: auto;padding-bottom: 60px;}
-.btns{position: fixed;top: 0;left: 0;width: 35%;padding: 8px 20px;text-align: center;
+.resume{width: 70%;margin: 0 auto;text-align: center;overflow: auto;padding-bottom: 60px;margin-top: 50px}
+.btns{position: fixed;top: 0;left: 0;width: 32%;padding: 8px 20px;padding-top: 14px;text-align: center;
     height: 40px;border-bottom: 1px solid #000;}
 .btns::after{content: '';display: block;background: #000;width: 8px;height: 8px;border-radius: 50%;position: absolute;
     right: -4px;bottom: -1px;}
 .btns>button{margin: 0 8px;position: relative;border: none;background: none;}
 
 
-section{margin-top: 40px;}
-section>h1{margin-top: 20px;text-align: center;font-weight: 400;width: 100%}
+section{margin-top: 60px;}
+section>h1{text-align: center;font-weight: 400;width: 100%}
 
 .about>p{text-align: center;margin-top: 10px;}
 
