--- a/css/editable-span.css
+++ b/css/editable-span.css
@@ -1,6 +1,6 @@
 .editableSpan{position: relative}
+.editableSpan>button{border: none;background: #eee;font-size: 12px;color: #777}
 
 
 
-/* .editableSpan>button{display: none}
-.editableSpan:hover>button{display: inline;position: absolute;top: 0;left: 100%;} */
+.editableSpan>button:hover{ cursor:pointer;}
