--- a/css/index.css
+++ b/css/index.css
@@ -20,22 +20,33 @@ body{width: 100%;height: 100vh;overflow: hidden;}
 
 
 section{margin-top: 60px;}
-section>h1{text-align: center;font-weight: 400;width: 100%}
+section>h2{text-align: center;font-weight: 400;width: 100%;width: 100%}
 
+.about>h1{text-align: center;font-size: 30px;font-weight: 500;}
 .about>p{text-align: center;margin-top: 10px;}
 
-.skill{}
+.skills{}
 
 .skillWrap{width: 100%;display: flex;flex-wrap: wrap;justify-content: space-between;}
-.skillWrap>li{width: 40%;margin-top: 20px;padding: 8px 12px;border: 1px solid #ddd}
-
+.skillWrap>li{width: 40%;margin-top: 20px;padding: 8px 12px;border: 1px solid #ddd;text-align: center;position: relative}
+.skillWrap>li>.deleteSkill{position: absolute;right: 4px;top: -4px;color: #888}
+.skillWrap>li>.deleteSkill:hover{cursor: pointer}
+.skillWrap>li.addSkill{display: flex;align-items: center;justify-content: center}
+.skillWrap>li.addSkill>span:hover{cursor: pointer; }
 
 
 .projects{}
 .projectWrap{width: 100%;}
-.projectWrap>li{margin-top: 16px;padding: 8px 40px;width: 100%;text-align: center;border: 1px solid #ddd}
+.projectWrap>li{margin-top: 16px;padding: 8px 40px;width: 100%;text-align: center;border: 1px solid #ddd;position: relative}
+.projectWrap>li>.deleteProject{position: absolute;right: 4px;top: -4px;color: #888}
+.projectWrap>li>.deleteProject:hover{cursor: pointer}
+/* .projectWrap>li.addProject{display: flex;align-items: center;justify-content: center} */
+.projectWrap>li.addProject>span:hover{cursor: pointer; }
 
 
 
-
-.quitPreview{position: fixed;top: 20px;left: 20px;}
+.quitPreview{position: fixed;top: 0;left: 0;padding: 8px 20px;padding-top: 14px;text-align: center;
+    height: 40px;border-bottom: 1px solid #000;}
+.quitPreview::after{content: '';display: block;background: #000;width: 8px;height: 8px;border-radius: 50%;position: absolute;
+    right: -4px;bottom: -1px;}
+.quitPreview>button{background: none;border: none;margin-bottom:4px }
