--- a/css/login.css
+++ b/css/login.css
@@ -5,14 +5,19 @@ input[type=text]:focus, input[type=password]:focus, textarea:focus { -webkit-box
 
 
 .loginForm{position: fixed;min-width: 500px;min-height: 300px;background: #fff;border: 1px solid #ddd;top: 50%;left: 50%;
-transform: translate(-50%,-50%);}
+transform: translate(-50%,-50%);display: flex;flex-direction: column;justify-content: center;align-items: center}
 /* display: flex;flex-direction: column;justify-content: space-between;align-items: center} */
 
-.loginForm>h2{font-weight: 400}
-.loginForm>.close{position: absolute;font-size: 18px;border: 1px solid #eee;border-radius: 50%;width: 32px;height:32px;
-    display: flex;align-items: center ;justify-content: center;background: url(../images/close1.png) center center;
-    top: -16px;right: -16px;}
-.login .row,h2,.lbtns{margin: 20px;}
-.login .row>input{background: none;border: none;border-bottom:1px solid #000;margin-left: 20px;}
+.loginForm>h2{font-weight: 400;letter-spacing: 0.4em}
+.loginForm>.close{position: absolute;font-size: 18px;
+    display: flex;align-items: center ;justify-content: center;
+    top: 6px;right: 8px;color: #888}
+    /* background: url(../images/close1.png) center center;border: 1px solid #eee;border-radius: 50%;width: 32px;height:32px; */
+.loginForm>.row,.loginForm>h2,.loginForm>.lbtns{margin: 20px;}
+.loginForm>.row>input{background: none;border: none;border-bottom:1px solid #000;margin-left: 6px;}
+.loginForm>.row>label{letter-spacing: 0.4em}
 
-.lbtns>button{border: none;background: #000;color: #fff;padding: 4px 6px;}
+.loginForm>.lbtns{width: 50%;display: flex;justify-content: space-around;}
+/* //border: 1px solid pink */
+.lbtns>button{border: none;background: #000;color: #fff;padding: 2px 10px;}
+.lbtns>.lregister{padding: 4px 8px;border: 1px solid #eee}
