--- a/css/share.css
+++ b/css/share.css
@@ -1,4 +1,7 @@
-.share{position: fixed;min-width: 400px;min-height: 300px;background: #fff;border: 1px solid #ddd;top: 50%;left: 50%;
-    transform: translate(-50%,-50%);padding: 20px;text-align: center}
+.share{position: fixed;min-width: 500px;min-height: 300px;background: #fff;border: 1px solid #ddd;top: 50%;left: 50%;
+    transform: translate(-50%,-50%);padding: 20px;;display: flex;flex-direction: column-reverse;align-items: center}
 .share>h2{font-weight: 400;}
-.share>textarea{width: 100%;height: 4em;margin-top: 40px;resize: none;word-break: break-all;}
+.share>textarea{width: 100%;height: 4em;margin-top: 36px;resize: none;word-break: break-all;margin-bottom: 48px;
+    padding: 8px;}
+
+.share>.closeShare{position: absolute;top: 6px;right: 8px;color: #888}
