--- a/css/dark.css
+++ b/css/dark.css
@@ -11,28 +11,42 @@ body.dark{width: 100%;height: 100vh;overflow: hidden;background: #000;color: #ff
 
 .page{width: 100%;height: 100vh;overflow: auto;margin:0 auto;margin-top: 40px;}
 
-.page>.resume{width: 70%;margin: 0 auto;border: 1px solid red;text-align: center;overflow: auto;padding-bottom: 60px;}
-.btns{position: fixed;top: 0;height: 0;width: 100%;padding: 8px 20px;border: 1px solid rebeccapurple;text-align: center;
-    height: 40px;}
-.btns>button{margin: 0 8px;position: relative;}
+.resume{width: 70%;margin: 0 auto;text-align: center;overflow: auto;padding-bottom: 60px;margin-top: 50px}
+.btns{position: fixed;top: 0;left: 0;width: 32%;padding: 8px 20px;padding-top: 14px;text-align: center;
+    height: 40px;border-bottom: 1px solid #000;}
+.btns::after{content: '';display: block;background: #fff;width: 8px;height: 8px;border-radius: 50%;position: absolute;
+    right: -4px;bottom: -1px;}
+.btns>button{margin: 0 8px;position: relative;border: none;background: none;}
 
-section{margin-top: 40px;}
-section>h1{margin-top: 20px;text-align: center;font-weight: 400;width: 100%}
 
+section{margin-top: 60px;}
+section>h2{text-align: center;font-weight: 400;width: 100%;width: 100%}
+
+.about>h1{text-align: center;font-size: 30px;font-weight: 500;}
 .about>p{text-align: center;margin-top: 10px;}
 
-.skill{}
+.skills{}
 
-.skillWrap{width: 100%;display: flex;flex-wrap: wrap;justify-content: space-around;}
-.skillWrap>li{width: 40%;margin-top: 20px;padding: 8px 12px;border: 1px solid #ddd}
-
+.skillWrap{width: 100%;display: flex;flex-wrap: wrap;justify-content: space-between;}
+.skillWrap>li{width: 40%;margin-top: 20px;padding: 8px 12px;border: 1px solid #ddd;text-align: center;position: relative}
+.skillWrap>li>.deleteSkill{position: absolute;right: 4px;top: -4px;color: #888}
+.skillWrap>li>.deleteSkill:hover{cursor: pointer}
+.skillWrap>li.addSkill{display: flex;align-items: center;justify-content: center}
+.skillWrap>li.addSkill>span:hover{cursor: pointer; }
 
 
 .projects{}
 .projectWrap{width: 100%;}
-.projectWrap>li{margin-top: 16px;padding: 8px 40px;width: 100%;text-align: center;border: 1px solid #ddd}
+.projectWrap>li{margin-top: 16px;padding: 8px 40px;width: 100%;text-align: center;border: 1px solid #ddd;position: relative}
+.projectWrap>li>.deleteProject{position: absolute;right: 4px;top: -4px;color: #888}
+.projectWrap>li>.deleteProject:hover{cursor: pointer}
+/* .projectWrap>li.addProject{display: flex;align-items: center;justify-content: center} */
+.projectWrap>li.addProject>span:hover{cursor: pointer; }
 
 
 
-
-.quitPreview{position: fixed;top: 20px;left: 20px;}
+.quitPreview{position: fixed;top: 0;left: 0;padding: 8px 20px;padding-top: 14px;text-align: center;
+    height: 40px;border-bottom: 1px solid #000;}
+.quitPreview::after{content: '';display: block;background: #000;width: 8px;height: 8px;border-radius: 50%;position: absolute;
+    right: -4px;bottom: -1px;}
+.quitPreview>button{background: none;border: none;margin-bottom:4px }
