--- a/css/login.css
+++ b/css/login.css
@@ -6,18 +6,15 @@ input[type=text]:focus, input[type=password]:focus, textarea:focus { -webkit-box
 
 .loginForm{position: fixed;min-width: 500px;min-height: 300px;background: #fff;border: 1px solid #ddd;top: 50%;left: 50%;
 transform: translate(-50%,-50%);display: flex;flex-direction: column;justify-content: center;align-items: center}
-/* display: flex;flex-direction: column;justify-content: space-between;align-items: center} */
 
-.loginForm>h2{font-weight: 400;letter-spacing: 0.4em}
-.loginForm>.close{position: absolute;font-size: 18px;
+.loginForm>h2{font-weight: 400;letter-spacing: 0.4em;margin-top: 50px;margin-bottom: 8px;}
+.loginForm>.closeLogin{position: absolute;font-size: 18px;
     display: flex;align-items: center ;justify-content: center;
-    top: 6px;right: 8px;color: #888}
-    /* background: url(../images/close1.png) center center;border: 1px solid #eee;border-radius: 50%;width: 32px;height:32px; */
-.loginForm>.row,.loginForm>h2,.loginForm>.lbtns{margin: 20px;}
+    top: 4px;right: 8px;color: #888}
+.loginForm>.row,.loginForm>.lbtns{margin: 20px;}
 .loginForm>.row>input{background: none;border: none;border-bottom:1px solid #000;margin-left: 6px;}
 .loginForm>.row>label{letter-spacing: 0.4em}
 
-.loginForm>.lbtns{width: 50%;display: flex;justify-content: space-around;}
-/* //border: 1px solid pink */
-.lbtns>button{border: none;background: #000;color: #fff;padding: 2px 10px;}
-.lbtns>.lregister{padding: 4px 8px;border: 1px solid #eee}
+.loginForm>.lbtns{width: 50%;display: flex;}
+.lbtns>button{border: none;background: #000;color: #fff;padding: 2px 12px;margin-left: 72px;}
+.lbtns>.lregister{border: 1px solid #eee;background: #ddd;padding: 2px 10px;margin-left: 30px;}
