--- a/css/register.css
+++ b/css/register.css
@@ -1,3 +1,21 @@
 
-.register{position: fixed;min-width: 400px;min-height: 300px;background: #fff;border: 1px solid #ddd;top: 50%;left: 50%;
-transform: translate(-50%,-50%)}
+
+input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill { -webkit-box-shadow: 0 0 0 1000px white inset; }
+input[type=text]:focus, input[type=password]:focus, textarea:focus { -webkit-box-shadow: 0 0 0 1000px white inset; }
+
+
+
+.registerForm{position: fixed;min-width: 500px;min-height: 300px;background: #fff;border: 1px solid #ddd;top: 50%;left: 50%;
+transform: translate(-50%,-50%);display: flex;flex-direction: column;justify-content: center;align-items: center}
+
+.registerForm>h2{font-weight: 400;letter-spacing: 0.4em;margin-top: 50px;margin-bottom: 8px;}
+.registerForm>.closeRegister{position: absolute;font-size: 18px;
+    display: flex;align-items: center ;justify-content: center;
+    top: 4px;right: 8px;color: #888}
+.registerForm>.row,.registerForm>.rbtns{margin: 20px;}
+.registerForm>.row>input{background: none;border: none;border-bottom:1px solid #000;margin-left: 6px;}
+.registerForm>.row>label{letter-spacing: 0.4em}
+
+.registerForm>.rbtns{width: 50%;display: flex;}
+.rbtns>button{border: none;background: #000;color: #fff;padding: 2px 12px;margin-left: 72px;}
+.rbtns>.rlogin{border: 1px solid #eee;background: #ddd;padding: 2px 10px;margin-left: 30px;}
