--- a/css/login.css
+++ b/css/login.css
@@ -12,7 +12,7 @@ transform: translate(-50%,-50%);display: flex;flex-direction: column;justify-con
     display: flex;align-items: center ;justify-content: center;
     top: 4px;right: 8px;color: #888}
 .loginForm>.row,.loginForm>.lbtns{margin: 20px;}
-.loginForm>.row>input{background: none;border: none;border-bottom:1px solid #000;margin-left: 6px;}
+.loginForm>.row>input{background: none;border: none;border-bottom:1px solid #000;margin-left: 6px;outline: none}
 .loginForm>.row>label{letter-spacing: 0.4em}
 
 .loginForm>.lbtns{width: 50%;display: flex;}
