--- a/css/register.css
+++ b/css/register.css
@@ -13,7 +13,7 @@ transform: translate(-50%,-50%);display: flex;flex-direction: column;justify-con
     display: flex;align-items: center ;justify-content: center;
     top: 4px;right: 8px;color: #888}
 .registerForm>.row,.registerForm>.rbtns{margin: 20px;}
-.registerForm>.row>input{background: none;border: none;border-bottom:1px solid #000;margin-left: 6px;}
+.registerForm>.row>input{background: none;border: none;border-bottom:1px solid #000;margin-left: 6px;outline: none}
 .registerForm>.row>label{letter-spacing: 0.4em}
 
 .registerForm>.rbtns{width: 50%;display: flex;}
